2013-02-23  David Nadlinger  <code@klickverbot.at>

	* crt/tlssup.c (_tls_used): Remove +1 form _tls_start to avoid
	section-relative offset displacement.

2013-02-16  Kai Tietz  <ktietz@redhat.com>

	* Makefile.am: Add new library files.
	* Makefile.in: Regenerated.

2012-01-16  Rafaël Carré <funman@videolan.org>

	* lib32/msvcr110.def: Mark atexit with DATA.
	* lib64/msvcr110.def: Likewise.
	* lib32/msvcr90d.def: Likewise.
	* lib64/msvcr90d.def: Likewise.

2012-01-13  Kai Tietz  <ktietz@redhat.com>

	* crt/tlssup.c (_tls_start,_tls_end): Make variables
	pointer-typed, so that alignment for start-address is
	on pointer-alignment.

2013-01-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	* gdtoa/strtodnrp.c (__mingw_strtod): New, aliased to __strtod.